@@ -32,14 +32,11 @@ fi
 
 #/sbin/insmod $modulename
 
-# print to screen only, 4 8K buffers
-#../../stpd/stpd -p -b 8192 -n 4 
+# print to screen only
+#../../stpd/stpd -p $modulename
 
-# print to screen and log to files, 4 8K buffers
-../../stpd/stpd -b 8192 -n 4 $modulename
+# print to screen and log to files (file logging only if #define STP_NETLINK_ONLY commented out in module)
+../../stpd/stpd $modulename
 
-# no screen or log
-#../../stpd/stpd -q -b 8192 -n 4 
-
-# stpd will remove module when it exits
-#/sbin/rmmod $modulename
+# no screen, log to files (file logging only if #define STP_NETLINK_ONLY commented out in module)
+#../../stpd/stpd -q $modulename
